rusty-cdk-macros/tests/fails/bucket_arn_passed_in.stderr
error: value is an arn, not a bucket name
 --> tests/fails/bucket_arn_passed_in.rs:4:26
  |
4 |     let bucket = bucket!("arn:aws:s3:::some-example-arn");
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
